<resources>
    <string name="app_name">Working with storage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="cat_name">Cat name</string>
    <string name="cat_age">Cat age</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="age">"Age: "</string>
    <string name="name">"Name: "</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string-array name="db_entries">
        <item>Room</item>
        <item>SQLite helper cursor</item>
    </string-array>
    <string-array name="db_entries_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="sort">
        <item>None</item>
        <item>Name</item>
        <item>Age</item>
    </string-array>
    <string-array name="sort_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>